--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -11,7 +11,7 @@
 
 @media screen and (max-width: 768px) {
   .lead__title {
-    max-width: calc(100%-48px);
+    max-width: calc(100% - 48px);
   }
 }
 
