--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -5,11 +5,7 @@
   margin: 28px auto 0 auto;
   align-items: flex-start;
   max-width: calc(100% - 96px);
-}
-@media screen and (max-width: 1024px) {
-  .header {
-    max-width: calc(100% - 96px);
-  }
+  font-family: "Inter", Arial, sans-serif;
 }
 
 @media screen and (max-width: 768px) {
