--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,25 +1,33 @@
 .photo-grid {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(3, 1fr);
+  grid-template-columns: repeat(auto-fill, minmax(284px, 1fr));
+  grid-template-rows: repeat(auto-fill, minmax(213px, 1fr));
   gap: 16px;
   margin: 0 auto 0 auto;
   max-width: calc(100% - 96px);
 }
 @media screen and (max-width: 1024px) {
   .photo-grid {
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(4, 1fr);
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-template-rows: repeat(auto-fill, minmax(225px, 1fr));
     gap: 14px;
   }
 }
 
 @media screen and (max-width: 768px) {
   .photo-grid {
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(6, 1fr);
+    grid-template-columns: repeat(auto-fill, minmax(352px, 1fr));
+    grid-template-rows: repeat(auto-fill, minmax(264px, 1fr));
     max-width: calc(100% - 48px);
     gap: 16px;
+  }
+}
+@media screen and (max-width: 550px) {
+  .photo-grid {
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-template-rows: repeat(auto-fill, minmax(122px, 1fr));
+    max-width: calc(100% - 48px);
+    gap: 14px;
   }
 }
 
