--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,22 +1,22 @@
 .cover__title {
   z-index: 2;
   max-width: 560px;
-  margin-top: 245px;
-  margin-bottom: 32px;
+  margin: 0 0 32px 0;
   margin-right: auto;
   margin-left: auto;
   text-align: center;
-  font-family: "Inter";
   font-weight: 900;
   font-size: 72px;
   line-height: 76px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 760px) {
   .cover__title {
-    max-width: 560px;
-    margin-top: 115px;
-    margin-bottom: 32px;
+    font-size: 38px;
+    line-height: 40px;
+    margin: 0 auto 22px auto;
+    max-width: 300px;
+    
   }
 }
 
@@ -24,9 +24,7 @@
   .cover__title {
     font-size: 32px;
     line-height: 35px;
-    text-align: center;
     max-width: 250px;
-    margin-top: 33px;
-    margin-bottom: 16px;
+    margin: 0 0 16px 0;
   }
 }
