--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,6 +1,5 @@
 .cover {
   background-position: center center;
-  max-height: 740px;
   background: no-repeat;
   background-image: url(../../images/cover-trains.jpg);
   margin: 0 48px 92px 48px;
@@ -9,21 +8,36 @@
   position: relative;
   background-size: cover;
   z-index: 1;
+  justify-content: center;
+  align-items: center;
+  font-family: "Inter", Arial, sans-serif;
+  min-height: 740px;
   object-fit: cover;
 }
 
 @media screen and (max-width: 1024px) {
   .cover {
     margin: 0 0 92px 0;
+    max-width: 100%;
+    min-height: 640px;
   }
 }
 @media screen and (max-width: 768px) {
   .cover {
     margin: 0 0 88px 0;
-    background-size: 100% auto;
     width: 100%;
-    max-width: 768px;
-    max-height: 480px;
+    min-height: 480px;
+  }
+}
+@media screen and (max-width: 650px) {
+  .cover {
+    min-height: 400px;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .cover {
+    min-height: 300px;
   }
 }
 
@@ -32,7 +46,7 @@
     background-size: 100% auto;
     margin: 0 0 64px 0;
     padding: 0;
-    max-height: 200px;
+    min-height: 200px;
     box-sizing: border-box;
     position: relative;
   }
@@ -48,7 +62,7 @@
   display: block;
   width: 100%;
   height: 100%;
-  opacity: 0.5;
+  opacity: 0.3;
   transition: opacity 0.3s ease;
   z-index: 0;
   top: 0;
