--- a/blocks/footer/__link-element/footer__link-element.css
+++ b/blocks/footer/__link-element/footer__link-element.css
@@ -1,6 +1,13 @@
 .footer__link-element {
   margin-right: 18px;
 }
+
+@media (min-width: 321px) and (max-width: 767px) {
+  .footer__link-element {
+    margin-right: 9px;
+  }
+}
+
 @media screen and (max-width: 320px) {
   .footer__link-element {
     margin-bottom: 32px;
