--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -1,21 +1,23 @@
 .footer__link {
   color: inherit;
   text-decoration: none;
-  font-family: "Inter";
-  font-style: normal;
   font-weight: 400;
   font-size: 16px;
   line-height: 18px;
+  transition: opacity 0.3s ease;
+}
+@media (min-width: 321px) and (max-width: 767px) {
+  .footer__link {
+    font-size: 9px;
+  }
 }
 @media screen and (max-width: 320px) {
   .footer__link {
     font-size: 24px;
     line-height: 24px;
-    opacity: 1;
-    transition: opacity 0.3s ease;
   }
 }
 .footer__link:hover {
-  opacity: 0.5;
+  opacity: 0.8;
   cursor: pointer;
 }
