--- a/blocks/header/__lang-link/lang-link.css
+++ b/blocks/header/__lang-link/lang-link.css
@@ -1,12 +1,24 @@
 .header__lang-link {
   padding: 0;
-  margin: 0 18px 0 0;
+  margin: 0;
   display: inline-block;
   color: inherit;
   text-decoration: none;
-  font-family: "Inter";
   font-weight: 400;
   font-size: 24px;
   line-height: 28px;
   text-align: right;
+  transition: opacity 0.4s ease;
+}
+
+@media screen and (max-width: 320px) {
+  .header__lang-link {
+    font-size: 18px;
+    line-height: 20px;
+    opacity: 1;
+  }
+}
+
+.header__lang-link:hover {
+  opacity: 0.8;
 }
