--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,6 +1,4 @@
 .lead__caption {
-  font-family: "Inter";
-  font-style: normal;
   font-weight: 400;
   font-size: 10px;
   line-height: 14px;
@@ -9,4 +7,15 @@
   align-self: flex-start;
   display: inline-block;
   margin: 0;
+}
+@media screen and (max-width: 768px) {
+  .lead__caption {
+    margin-left: 24px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .lead__caption {
+    margin-left: 16px;
+  }
 }
