--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,8 +1,6 @@
 .lead__title {
   margin: 0 auto 0 auto;
   text-align: center;
-  font-family: "Inter";
-  font-style: normal;
   font-weight: 900;
   font-size: 96px;
   line-height: 100px;
@@ -12,6 +10,13 @@
 @media screen and (max-width: 768px) {
   .lead__title {
     max-width: calc(100% - 48px);
+  }
+}
+@media (min-width: 321px) and (max-width: 767px) {
+  .lead__title {
+    max-width: 100%;
+    font-size: 45px;
+    line-height: 1.1;
   }
 }
 
