--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -3,7 +3,7 @@
   max-width: 1280px;
   /*height: 100vh;*/
   min-width: 320px;
-  font-family: "Inter", sans-serif;
+  font-family: "Inter", Arial, sans-serif;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: 100%;
