--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -7,22 +7,41 @@
     "title website"
     "image description";
   margin-bottom: 80px;
+  font-family: "Inter", Arial, sans-serif;
 }
 @media screen and (max-width: 1024px) {
   .place {
     column-gap: 32px;
-    row-gap: 48px;
     grid-template-columns: repeat(auto-fit, minmax(440px, 1fr));
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .place {
+    column-gap: 30px;
+    grid-template-columns: repeat(auto-fit, minmax(380px, 1fr));
+    margin-bottom: 72px;
   }
 }
 
 @media screen and (max-width: 768px) {
   .place {
     column-gap: 28px;
-    row-gap: 48px;
     grid-template-columns: repeat(auto-fit, minmax(340px, 1fr));
-    margin-bottom: 73px;
-    min-height: 581px;
+    margin-bottom: 72px;
+  }
+}
+
+@media screen and (max-width: 630px) {
+  .place {
+    grid-template-areas:
+      "title"
+      "website"
+      "image"
+      "description";
+    grid-template-columns: 1fr;
+    margin-bottom: 60px;
+    row-gap: 40px;
   }
 }
 
@@ -35,7 +54,7 @@
       "description";
     grid-template-columns: 1fr;
     margin-bottom: 50px;
-    grid-row: 32px;
+    row-gap: 32px;
   }
 }
 
