--- a/blocks/footer/__copyright-text/footer__copyright-text.css
+++ b/blocks/footer/__copyright-text/footer__copyright-text.css
@@ -4,8 +4,11 @@
   line-height: 16px;
   text-align: right;
 }
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 450px) {
   .footer__copyright-text {
     line-height: 14px;
+    margin-top: 48px;
+    margin-bottom: 0;
+    text-align: start;
   }
 }
