--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -4,4 +4,14 @@
   object-fit: cover;
 }
 
+@media screen and (max-width: 1024px) {
+  .place__image {
+    max-width: 440px;
+  }
+}
 
+@media screen and (max-width: 768px) {
+  .place__image {
+    max-width: 340px;
+  }
+}
